# polkadot-sdk-solochain-template

./: Cargo.toml  IMPLEMENTATION_SUMMARY.md  INFERIFY_README.md
pallets/ai-registry/: Cargo.toml
pallets/ai-registry/src/: benchmarking.rs  lib.rs  lib_complex.rs  lib_simple.rs  mock.rs  tests.rs  tests_new.rs  types.rs  weights.rs
